Add clear instructions and fix grammar

--- a/BSE658A-Assignment-03.Rmd
+++ b/BSE658A-Assignment-03.Rmd
@@ -11,9 +11,10 @@ Please answer the following the questions by either writing the code or text to 
 
 If you have any question/query, please feel free to ask it on HelloIITK. The deadline for submission is August 22 (Monday), 2022 11:59 PM IST.
 
-Please use R studio to answer the questions using minimal language. Don't worry about answering the questions perfectly also!
+Please use R studio to answer the questions using minimal language, but please don't worry about answering the questions perfectly also! Once you are done with the assignment, knit the `.Rmd` into a pdf and upload it on Turnitin. 
 
 Remember: you can always use R console to try out code which you don't want to include in `.Rmd` or want to share with others, but whatever you write in R console might affect the data handled by the code in `.Rmd` file and vice versa.
+
 
 ### Questions
 
@@ -33,7 +34,7 @@ Answer: *\<\< HERE \>\>*
 
 Answer: Number of rows: *\<\< HERE \>\>*, number of columns: *\<\< HERE \>\>*.
 
-5.  There are multiple columns in `AirPassengers`. Can you create a new column `Passengers` by adding all the values in different columns in a given row? The number of rows in the original dataset and the new dataset will be the same. (3 point)
+5.  There are multiple columns in `AirPassengers`. Can you create a new column `Passengers` by adding all the values in different columns in a given row? The number of rows in the original dataset and the new dataset will be the same. (3 points)
 
 Answer: *\<\< Insert R code chunk on the next line. You may delete this line. \>\>*
 
@@ -41,6 +42,6 @@ Answer: *\<\< Insert R code chunk on the next line. You may delete this line. \>
 
 Answer: *\<\< Insert R code chunk on the next line. You may delete this line. \>\>*
 
-7.  You might have used `Tidyverse` package to solve the above questions. Can you create a new column `PercentPassengers` which shows the percentage of passengers who flew in a given month of a given year? The value of hundred percentage denotes the total number of passengers who flew in a given year (which you have already calculated in the column `Passengers`). Make sure the column `PercentPassengers` is the first column in the dataset. (3 point)
+7.  You might have used `Tidyverse` package to solve the above questions. Can you create a new column `PercentPassengers` which shows the percentage of passengers who flew in a given month of a given year? The value of hundred percentage denotes the total number of passengers who flew in a given year (which you have already calculated in the column `Passengers`). Make sure the column `PercentPassengers` is the first column in the dataset. (3 points)
 
 Answer: *\<\< Insert R code chunk on the next line. You may delete this line. \>\>*
