--- a/BSE658A-Assignment-03.Rmd
+++ b/BSE658A-Assignment-03.Rmd
@@ -42,6 +42,6 @@ Answer: *\<\< Insert R code chunk on the next line. You may delete this line. \>
 
 Answer: *\<\< Insert R code chunk on the next line. You may delete this line. \>\>*
 
-7.  You might have used `Tidyverse` package to solve the above questions. Can you replace existing month columns with the percentage of passengers who flew in that month of the given year? The value of hundred percentage for a row or a year denotes the total number of passengers who flew in that particular year (which you have already calculated in the column `Passengers`). (3 points)
+7.  You might have used `Tidyverse` package to solve the above questions. Can you replace existing month columns with the percentage values? For example, if a total of 700 passengers flew in 1970 and 100 passengers flew in July, 1970, the July column should now have the value of 14.285 (100/700 * 100) instead of 700. You have already calculated the number of passengers corresponding to hundred percentage in the column `Passengers`. (3 points)
 
 Answer: *\<\< Insert R code chunk on the next line. You may delete this line. \>\>*
